plugins {
    id 'java'
    id 'application'
    id 'com.github.johnrengelman.shadow'

    id 'org.frgaal.compiler'
}

group 'YAPION'
version 'SNAPSHOT'

ext {
    uberJarName = "${group}-Serializer-${version}-all.jar"
    jarName = "${group}-Serializer-${version}.jar"
    libs = "${buildDir}/libs"

    groupName = "${group}"
}

repositories {
    mavenCentral()
}

targetCompatibility = '1.8'
sourceCompatibility = '15'

compileJava.options.encoding = 'UTF-8'
compileJava {
    options.compilerArgs << '-Xlint:deprecation' << '--enable-preview'
}

compileTestJava.options.encoding = 'UTF-8'
compileTestJava {
    options.compilerArgs << '-Xlint:deprecation' << '--enable-preview'
}

mainClassName = ''

dependencies {
    compileOnly 'org.projectlombok:lombok:1.18.22'
    testCompileOnly 'org.projectlombok:lombok:1.18.22'
    annotationProcessor 'org.projectlombok:lombok:1.18.22'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.22'

    implementation project(':YAPION-Hierarchy')
    implementation project(':YAPION-Parser')
    implementation project(':YAPION-Serializer')
    implementation project(':YAPION-IO')
    implementation project(':YAPION-Databind-JavaBase')
    implementation project(':YAPION-Databind-JavaCollections')
    implementation project(':YAPION-Databind-JavaOther')
    implementation project(':YAPION-Databind-JavaSecurity')
    implementation project(':YAPION-Databind-JavaTime')
    implementation project(':YAPION-Databind-JavaFunction')
    implementation project(':YAPION-Databind-JavaAtomic')

    // implementation 'ch.qos.logback:logback-classic:1.3.0-alpha5'

    implementation 'eu.infomas:annotation-detector:3.0.5'
}
